// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReviewListItem > renders default state 1`] = `
<div>
  <button
    aria-label="Open review: Sample Review"
    class="relative w-full text-left rounded-card r-card-lg p-[var(--space-3)] bg-card/90 border border-border/35 transition-all duration-200 focus-visible:outline-none disabled:opacity-60 disabled:pointer-events-none disabled:bg-muted/20 hover:bg-accent/10 hover:ring-2 hover:ring-[var(--theme-ring)] focus-visible:bg-accent/15 focus-visible:ring-2 focus-visible:ring-[var(--theme-ring)] active:bg-accent/20 active:ring-2 active:ring-[var(--theme-ring)] data-[selected=true]:bg-accent/20 data-[selected=true]:ring-2 data-[selected=true]:ring-accent"
    data-scope="reviews"
    type="button"
  >
    <div
      class="flex flex-col gap-[var(--space-2)]"
    >
      <div
        class="flex items-start justify-between gap-[var(--space-2)]"
      >
        <div
          class="truncate font-medium text-body"
        >
          Sample Review
        </div>
        <div
          class="truncate text-ui text-muted-foreground"
        >
          Lux vs Ahri
        </div>
      </div>
      <div
        class="flex items-center justify-between gap-[var(--space-2)]"
      >
        <div
          class="flex items-center gap-[var(--space-2)]"
        >
          <span
            aria-hidden="true"
            class="h-[var(--space-2)] w-[var(--space-2)] rounded-full ring-2 motion-safe:animate-[blink_1s_steps(2)_infinite] motion-reduce:animate-none bg-success ring-success"
          />
          <span
            class="inline-flex max-w-full items-center gap-[var(--space-2)] whitespace-nowrap rounded-card r-card-lg font-medium tracking-[-0.01em] border bg-muted/18 shadow-badge transition-[background,box-shadow,transform] duration-140 ease-out py-[var(--space-1)] text-label leading-none border-card-hairline px-[var(--space-1)]"
          >
            MID
          </span>
        </div>
        <span
          aria-label="Rating 9 out of 10"
          class="px-[var(--space-2)] py-[var(--space-1)] rounded-full text-ui leading-none font-medium text-accent-foreground ring-1 ring-accent bg-gradient-to-br from-accent to-accent-2 hover:from-accent hover:to-accent-2 hover:ring-accent focus-visible:from-accent focus-visible:to-accent-2 focus-visible:ring-accent active:from-accent active:to-accent-2 active:ring-accent"
        >
          9
          /10
        </span>
      </div>
    </div>
  </button>
</div>
`;

exports[`ReviewListItem > renders disabled state 1`] = `
<div>
  <button
    aria-label="Open review: Sample Review"
    class="relative w-full text-left rounded-card r-card-lg p-[var(--space-3)] bg-card/90 border border-border/35 transition-all duration-200 focus-visible:outline-none disabled:opacity-60 disabled:pointer-events-none disabled:bg-muted/20 hover:bg-accent/10 hover:ring-2 hover:ring-[var(--theme-ring)] focus-visible:bg-accent/15 focus-visible:ring-2 focus-visible:ring-[var(--theme-ring)] active:bg-accent/20 active:ring-2 active:ring-[var(--theme-ring)] data-[selected=true]:bg-accent/20 data-[selected=true]:ring-2 data-[selected=true]:ring-accent"
    data-scope="reviews"
    disabled=""
    type="button"
  >
    <div
      class="flex flex-col gap-[var(--space-2)]"
    >
      <div
        class="flex items-start justify-between gap-[var(--space-2)]"
      >
        <div
          class="truncate font-medium text-body"
        >
          Sample Review
        </div>
        <div
          class="truncate text-ui text-muted-foreground"
        >
          Lux vs Ahri
        </div>
      </div>
      <div
        class="flex items-center justify-between gap-[var(--space-2)]"
      >
        <div
          class="flex items-center gap-[var(--space-2)]"
        >
          <span
            aria-hidden="true"
            class="h-[var(--space-2)] w-[var(--space-2)] rounded-full ring-2 motion-safe:animate-[blink_1s_steps(2)_infinite] motion-reduce:animate-none bg-success ring-success"
          />
          <span
            class="inline-flex max-w-full items-center gap-[var(--space-2)] whitespace-nowrap rounded-card r-card-lg font-medium tracking-[-0.01em] border bg-muted/18 shadow-badge transition-[background,box-shadow,transform] duration-140 ease-out py-[var(--space-1)] text-label leading-none border-card-hairline px-[var(--space-1)]"
          >
            MID
          </span>
        </div>
        <span
          aria-label="Rating 9 out of 10"
          class="px-[var(--space-2)] py-[var(--space-1)] rounded-full text-ui leading-none font-medium text-accent-foreground ring-1 ring-accent bg-gradient-to-br from-accent to-accent-2 hover:from-accent hover:to-accent-2 hover:ring-accent focus-visible:from-accent focus-visible:to-accent-2 focus-visible:ring-accent active:from-accent active:to-accent-2 active:ring-accent"
        >
          9
          /10
        </span>
      </div>
    </div>
  </button>
</div>
`;

exports[`ReviewListItem > renders loading state 1`] = `
<div>
  <div
    class="relative w-full text-left rounded-card r-card-lg p-[var(--space-3)] bg-card/90 border border-border/35 transition-all duration-200 focus-visible:outline-none disabled:opacity-60 disabled:pointer-events-none disabled:bg-muted/20 hover:bg-accent/10 hover:ring-2 hover:ring-[var(--theme-ring)] focus-visible:bg-accent/15 focus-visible:ring-2 focus-visible:ring-[var(--theme-ring)] active:bg-accent/20 active:ring-2 active:ring-[var(--theme-ring)] data-[selected=true]:bg-accent/20 data-[selected=true]:ring-2 data-[selected=true]:ring-accent motion-safe:animate-pulse motion-reduce:animate-none"
    data-scope="reviews"
  >
    <div
      class="h-[var(--space-3)] rounded-card bg-muted w-3/5 mb-[var(--space-3)]"
    />
    <div
      class="h-[var(--space-3)] rounded-card bg-muted w-2/5"
    />
  </div>
</div>
`;

exports[`ReviewListItem > renders selected state 1`] = `
<div>
  <button
    aria-current="true"
    aria-label="Open review: Sample Review"
    class="relative w-full text-left rounded-card r-card-lg p-[var(--space-3)] bg-card/90 border border-border/35 transition-all duration-200 focus-visible:outline-none disabled:opacity-60 disabled:pointer-events-none disabled:bg-muted/20 hover:bg-accent/10 hover:ring-2 hover:ring-[var(--theme-ring)] focus-visible:bg-accent/15 focus-visible:ring-2 focus-visible:ring-[var(--theme-ring)] active:bg-accent/20 active:ring-2 active:ring-[var(--theme-ring)] data-[selected=true]:bg-accent/20 data-[selected=true]:ring-2 data-[selected=true]:ring-accent"
    data-scope="reviews"
    data-selected="true"
    type="button"
  >
    <div
      class="flex flex-col gap-[var(--space-2)]"
    >
      <div
        class="flex items-start justify-between gap-[var(--space-2)]"
      >
        <div
          class="truncate font-medium text-body"
        >
          Sample Review
        </div>
        <div
          class="truncate text-ui text-muted-foreground"
        >
          Lux vs Ahri
        </div>
      </div>
      <div
        class="flex items-center justify-between gap-[var(--space-2)]"
      >
        <div
          class="flex items-center gap-[var(--space-2)]"
        >
          <span
            aria-hidden="true"
            class="h-[var(--space-2)] w-[var(--space-2)] rounded-full ring-2 motion-safe:animate-[blink_1s_steps(2)_infinite] motion-reduce:animate-none bg-success ring-success"
          />
          <span
            class="inline-flex max-w-full items-center gap-[var(--space-2)] whitespace-nowrap rounded-card r-card-lg font-medium tracking-[-0.01em] border bg-muted/18 shadow-badge transition-[background,box-shadow,transform] duration-140 ease-out py-[var(--space-1)] text-label leading-none border-card-hairline px-[var(--space-1)]"
          >
            MID
          </span>
        </div>
        <span
          aria-label="Rating 9 out of 10"
          class="px-[var(--space-2)] py-[var(--space-1)] rounded-full text-ui leading-none font-medium text-accent-foreground ring-1 ring-accent bg-gradient-to-br from-accent to-accent-2 hover:from-accent hover:to-accent-2 hover:ring-accent focus-visible:from-accent focus-visible:to-accent-2 focus-visible:ring-accent active:from-accent active:to-accent-2 active:ring-accent"
        >
          9
          /10
        </span>
      </div>
    </div>
  </button>
</div>
`;

exports[`ReviewListItem > renders untitled state 1`] = `
<div>
  <button
    aria-label="Open review: Untitled Review"
    class="relative w-full text-left rounded-card r-card-lg p-[var(--space-3)] bg-card/90 border border-border/35 transition-all duration-200 focus-visible:outline-none disabled:opacity-60 disabled:pointer-events-none disabled:bg-muted/20 hover:bg-accent/10 hover:ring-2 hover:ring-[var(--theme-ring)] focus-visible:bg-accent/15 focus-visible:ring-2 focus-visible:ring-[var(--theme-ring)] active:bg-accent/20 active:ring-2 active:ring-[var(--theme-ring)] data-[selected=true]:bg-accent/20 data-[selected=true]:ring-2 data-[selected=true]:ring-accent"
    data-scope="reviews"
    type="button"
  >
    <div
      class="flex flex-col gap-[var(--space-2)]"
    >
      <div
        class="flex items-start justify-between gap-[var(--space-2)]"
      >
        <div
          aria-label="Untitled Review"
          class="truncate font-medium text-body text-muted-foreground/70"
        >
          Untitled Review
        </div>
        <div
          class="truncate text-ui text-muted-foreground"
        >
          Lux vs Ahri
        </div>
      </div>
      <div
        class="flex items-center justify-between gap-[var(--space-2)]"
      >
        <div
          class="flex items-center gap-[var(--space-2)]"
        >
          <span
            aria-hidden="true"
            class="h-[var(--space-2)] w-[var(--space-2)] rounded-full ring-2 motion-safe:animate-[blink_1s_steps(2)_infinite] motion-reduce:animate-none bg-success ring-success"
          />
          <span
            class="inline-flex max-w-full items-center gap-[var(--space-2)] whitespace-nowrap rounded-card r-card-lg font-medium tracking-[-0.01em] border bg-muted/18 shadow-badge transition-[background,box-shadow,transform] duration-140 ease-out py-[var(--space-1)] text-label leading-none border-card-hairline px-[var(--space-1)]"
          >
            MID
          </span>
        </div>
        <span
          aria-label="Rating 9 out of 10"
          class="px-[var(--space-2)] py-[var(--space-1)] rounded-full text-ui leading-none font-medium text-accent-foreground ring-1 ring-accent bg-gradient-to-br from-accent to-accent-2 hover:from-accent hover:to-accent-2 hover:ring-accent focus-visible:from-accent focus-visible:to-accent-2 focus-visible:ring-accent active:from-accent active:to-accent-2 active:ring-accent"
        >
          9
          /10
        </span>
      </div>
    </div>
  </button>
</div>
`;
